[gd_scene load_steps=30 format=2]

[ext_resource path="res://actors/contact_damage.gd" type="Script" id=1]
[ext_resource path="res://actors/character_animator.gd" type="Script" id=2]
[ext_resource path="res://actors/base_scripts/enemy.gd" type="Script" id=3]
[ext_resource path="res://actors/death_handler.gd" type="Script" id=8]
[ext_resource path="res://actors/snake/snek_front.png" type="Texture" id=9]
[ext_resource path="res://combat_scripts/damage_hue.gd" type="Script" id=10]
[ext_resource path="res://ai/node_sight2d.gd" type="Script" id=11]
[ext_resource path="res://actors/spawn_flag.gd" type="Script" id=12]
[ext_resource path="res://actors/snake/snake1_death.tscn" type="PackedScene" id=13]
[ext_resource path="res://actors/dynamic_ysort.gd" type="Script" id=14]
[ext_resource path="res://actors/snake/snek_side.png" type="Texture" id=15]
[ext_resource path="res://actors/snake/snek_back.png" type="Texture" id=16]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool invert = false;

void fragment() {
    vec4 col = texture(TEXTURE, UV).rgba;
	if (invert) {
		col.r = 1.0 - col.r;
		col.g = 1.0 - col.g;
		col.b = 1.0 - col.b;
	}
    COLOR.rgba = col.rgba;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/invert = false

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 15 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 15 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 15 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 16 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 16 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 16 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk_side",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walk_down",
"speed": 10.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walk_up",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=16]
radius = 37.2074

[sub_resource type="CircleShape2D" id=17]
radius = 45.4747

[node name="Snake1" type="KinematicBody2D" groups=[
"Enemies",
]]
material = SubResource( 2 )
collision_layer = 4
collision_mask = 524295
script = ExtResource( 3 )

[node name="CharacterAnimator" type="AnimatedSprite" parent="."]
use_parent_material = true
position = Vector2( 0, -15.801 )
scale = Vector2( 3, 3 )
frames = SubResource( 15 )
animation = "walk_down"
playing = true
script = ExtResource( 2 )
invert_x = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 16 )

[node name="NodeSight2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 2148007939
script = ExtResource( 11 )

[node name="Damageable" type="Node" parent="."]
script = ExtResource( 8 )
death_scene = ExtResource( 13 )

[node name="DamageHue" type="Node" parent="Damageable"]
script = ExtResource( 10 )

[node name="SpawnInstance" type="Node" parent="."]
script = ExtResource( 12 )

[node name="ContactDamage" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactDamage"]
shape = SubResource( 17 )

[node name="DynamicYSort" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.658038, -15.7953 )
scale = Vector2( 5.09387, 5.36722 )
script = ExtResource( 14 )
